.provarCaches/00D5f000005vwGkEAI/objects/rstk__woordnic__c.object
<CustomObject>
    <description>woordnic__c</description>
    <fields>
        <fullName>rstk__altextid__c</fullName>
        <externalId>true</externalId>
        <label>altextid</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__woordnic_wocst__r.rstk__externalid__c + rstk__woordnic_compname__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__woordnic_compname__c + &apos;(&apos; + rstk__woordnic_wocst__r.rstk__wocst_ordno__c + &apos;)&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__woordnic_compname__c</fullName>
        <label>Component Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__woordnic_desc__c</fullName>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__woordnic_oper__c</fullName>
        <inlineHelpText>This field carries the Operation Number (numeric value) to which this Non-Inventory Component is associated</inlineHelpText>
        <label>Operation Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__woordnic_solinenic__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SO Line NIC</label>
        <referenceTo>rstk__solinenic__c</referenceTo>
        <relationshipLabel>WO Non-Inventory Comps</relationshipLabel>
        <relationshipName>SOLINENICS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__woordnic_wocst__c</fullName>
        <label>Work Order</label>
        <referenceTo>rstk__wocst__c</referenceTo>
        <relationshipLabel>WO Non-Inventory Comps</relationshipLabel>
        <relationshipName>WOORDNICs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__woordnic_woorddmd__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This field carries the Work Order Component to which this Non-Inventory Component is associated.</inlineHelpText>
        <label>Work Order Component</label>
        <referenceTo>rstk__woorddmd__c</referenceTo>
        <relationshipLabel>WO Non-Inventory Comps</relationshipLabel>
        <relationshipName>WO_Non_Inventory_Comps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__woordnic_woordop__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This field carries the Work Order Operation to which this Non-Inventory Component is associated.</inlineHelpText>
        <label>Work Order Operation</label>
        <referenceTo>rstk__woordop__c</referenceTo>
        <relationshipLabel>WO Non-Inventory Comps</relationshipLabel>
        <relationshipName>WO_Non_Inventory_Comps</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>WO Non-Inventory Comps</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <columns>NAME</columns>
        <columns>rstk__woordnic_wocst__c</columns>
        <columns>rstk__woordnic_desc__c</columns>
        <columns>rstk__woordnic_compname__c</columns>
        <columns>rstk__woordnic_solinenic__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WO Non-Inventory Comps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>